# mrx

./: .gitignore  .readthedocs.yaml  LICENSE  MRX_tokamak_demo.ipynb  README.md  debug_diffusion.py  debug_mass_accuracy.py  debug_minres.py  old_preconditioners_c0b58f0.py  params.txt  pyproject.toml  requirements.txt  run_autopep  run_scripts.py
.hydra/: config.yaml  hydra.yaml  overrides.yaml
conf/: config_gvec.yaml  config_mass_preconditioner.yaml  config_matvec_benchmark.yaml  config_mc_poisson.yaml  config_poincare.yaml  config_poisson_test.yaml  config_relax_from_nfs.yaml  config_stell.yaml
data/: W7-X_high_pressure_low_iota_output_10_10_10.h5  W7-X_high_pressure_low_iota_output_4_4_4.h5  W7-X_high_pressure_low_iota_output_5_5_5.h5  W7-X_high_pressure_low_iota_output_6_6_6.h5  W7-X_high_pressure_low_iota_output_7_7_7.h5  W7-X_high_pressure_low_iota_output_8_8_8.h5  W7-X_high_pressure_low_iota_output_9_9_9.h5  desc_aries_cs_10_10_10.h5  desc_aries_cs_4_4_4.h5  desc_aries_cs_5_5_5.h5  desc_aries_cs_6_6_6.h5  desc_aries_cs_7_7_7.h5  desc_aries_cs_8_8_8.h5  desc_aries_cs_9_9_9.h5  desc_dshape_4_4_4.h5  desc_dshape_5_5_5.h5  desc_dshape_6_6_6.h5  desc_dshape_7_7_7.h5  desc_heliotron.h5  desc_heliotron_10_10_10.h5  desc_heliotron_4_4_4.h5  desc_heliotron_5_5_5.h5  desc_heliotron_6_6_6.h5  desc_heliotron_7_7_7.h5  desc_heliotron_8_8_8.h5  desc_heliotron_9_9_9.h5  desc_ncsx_10_10_10.h5  desc_ncsx_4_4_4.h5  desc_ncsx_5_5_5.h5  desc_ncsx_6_6_6.h5  desc_ncsx_7_7_7.h5  desc_ncsx_8_8_8.h5  desc_ncsx_9_9_9.h5  desc_w7x_10_10_10.h5  desc_w7x_4_4_4.h5  desc_w7x_5_5_5.h5  desc_w7x_6_6_6.h5  desc_w7x_7_7_7.h5  desc_w7x_8_8_8.h5  desc_w7x_9_9_9.h5  (+13 more)
docs/: benchmark_artifact_diagnostics_report.md  benchmark_phase1_laplacian_all_k.md  building_blocks.md  greville_prod_refactor_handoff.md  hiptmair_xu_preconditioner.md  hodge_laplacian_strategy.md  iterative_solver_primer.md  k0_polar_fd_block_checklist.md  k1_mass_surgery_checklist.md  k3_hodge_strategy.md  laplacian_preconditioner_notes.md  local_assembly.md  manufactured_solutions.md  mass_preconditioners.md  matrix_free_operations.md  matrix_free_scalar.md  mrx_primer.md  poisson_convergence_submitit_bug.md  polar_true_derivative_G.md  preconditioner_cleanup_todo.md  preconditioner_plan.md  preconditioner_primer.md  preconditioner_stock_take.md  preconditioning_notes.md  refactoring_status.md  requirements.txt  surgery_schur_refactor_plan.md  tensor_debug_findings.md  tensor_preconditioner_primer.md  testing_strategy.md
mrx/: BoundaryConditions.py  BoundaryFitting.py  DeRhamSequence.py  DifferentialForms.py  InputOutput.py  IterativeSolvers.py  LazyMatrices.py  Nonlinearities.py  Plotting.py  PolarMapping.py  Projectors.py  Quadrature.py  Relaxation.py  SplineBases.py  Utils.py  __init__.py  assembly.py  boundary.py  config.py  coordinate_transforms.py  derham_sequence.py  desc_interface.py  differential_forms.py  extraction_operators.py  geometry.py  gvec_interface.py  io.py  iterative_solvers.py  lazy_matrices.py  local_assembly.py  mappings.py  nonlinearities.py  nullspace.py  operators.py  plotting.py  polar.py  preconditioners.py  projectors.py  quadrature.py  relaxation.py  (+6 more)
scripts/: Beltrami.py  EigenfunctionPerturbation.py  GS2.py  GS_Initial.py  LaplaceEquationSquare.py  MNRES.py  VectorLaplace.py  bcs.py  (+88 more)
(+342 files in other folders)
