[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrx"
version = "0.0.1"
license = {text = "MIT License"}
description="Differentiable 3D MHD equilibria without nested flux surfaces"
readme = "README.md"
# long_description = file: README.md
# long_description_content_type = text/markdown
requires-python = ">=3.8"
authors = [
  {name = "Tobias Blickhan", email = "tobias.blickhan@nyu.edu"},
]
keywords = [
    "plasma physics",
    "plasma",
    "magnetohydrodynamics",
    "force_balance",
    "mhd",
    "nuclear fusion reactor",
    "fusion",
    "stellarator",
    "vmec",
    "spec",
    "optimization",
    "Biot-Savart",
    "magnetostatics"
]
dependencies = [
    "numpy>=1.21",
    "jax>=0.2.5",
    "jaxlib>=0.1.56",
    "scipy>=1.5.4",
    "matplotlib",
    "ruff",
    "autopep8",
    "diffrax",
    "optax",
    "optimistix",
    "h5py",
]

[tool.ruff]
target-version = "py311"

[tool.setuptools.packages.find]
include = ["mrx*"]  # Include specific packages
exclude = ["scripts_tutorials*", "scripts_deprecated*"]                  # Exclude specific package

[project.optional-dependencies]
SPEC = ["py_spec>=3.0.1", "pyoculus>=0.1.1", "h5py>=3.1.0"]
MPI = ["mpi4py>=3.0.3"]
VIS = ["vtk >= 8.1.2", "PyQt5", "plotly", "networkx"]
DOCS = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://github.com/ToBlick/mrx"
Download = "https://github.com/ToBlick/mrx"
Issues = "https://github.com/ToBlick/mrx/issues"
Repository = "https://github.com/ToBlick/mrx"
