[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrx"
version = "0.0.1"
license = {text = "MIT License"}
description="Differentiable 3D MHD equilibria without nested flux surfaces"
readme = "README.md"
# long_description = file: README.md
# long_description_content_type = text/markdown
requires-python = ">=3.10"
authors = [
  {name = "Tobias Blickhan", email = "tobias.blickhan@nyu.edu"},
]
keywords = [
    "plasma physics",
    "plasma",
    "magnetohydrodynamics",
    "force_balance",
    "mhd",
    "nuclear fusion reactor",
    "fusion",
    "stellarator",
    "vmec",
    "spec",
    "optimization",
    "Biot-Savart",
    "magnetostatics"
]
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "scipy",
    "matplotlib",
    "ruff",
    "autopep8",
    "diffrax",
    "optax",
    "optimistix",
    "equinox",
    "xarray",
]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.ruff]
target-version = "py312"
extend-exclude = ["docs/source/notebooks/*.ipynb", "*.ipynb"]

[tool.setuptools.packages.find]
include = ["mrx*"]  # Include specific packages
exclude = ["scripts_tutorials*", "scripts_deprecated*"]                  # Exclude specific package

[project.optional-dependencies]
DOCS = ["sphinx", "sphinx-rtd-theme", "nbsphinx", "ipykernel"]
SLURM = ["hydra-core>=1.3", "h5netcdf>=1.0", "h5py>=3.1.0"]
WANDB = ["wandb", "h5netcdf>=1.0", "h5py>=3.1.0"]

[project.urls]
Homepage = "https://github.com/ToBlick/mrx"
Download = "https://github.com/ToBlick/mrx"
Issues = "https://github.com/ToBlick/mrx/issues"
Repository = "https://github.com/ToBlick/mrx"